// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates 5nodes raft no-TM cakeshop docker config 1`] = `
Object {
  "dockerCustom": undefined,
  "network": Object {
    "cakeshop": "0.11.0-RC2",
    "configDir": "network/5-nodes-raft-docker-compose/generated",
    "consensus": "raft",
    "customizePorts": false,
    "deployment": "docker-compose",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "5-nodes-raft-docker-compose",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.4.0",
    "transactionManager": "none",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "ip": "172.16.239.11",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "ip": "172.16.239.12",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "ip": "172.16.239.13",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "ip": "172.16.239.14",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "ip": "172.16.239.15",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
    },
  ],
}
`;

exports[`creates 5nodes raft no-TM config 1`] = `
Object {
  "dockerCustom": undefined,
  "network": Object {
    "cakeshop": "none",
    "configDir": "network/5-nodes-raft-bash/generated",
    "consensus": "raft",
    "customizePorts": false,
    "deployment": "bash",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "5-nodes-raft-bash",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.4.0",
    "transactionManager": "none",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "ip": "127.0.0.1",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "ip": "127.0.0.1",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
    },
  ],
}
`;

exports[`creates 6nodes raft custom config 1`] = `
Object {
  "dockerCustom": undefined,
  "network": Object {
    "cakeshop": "none",
    "configDir": "network/6-nodes-raft-tessera-bash/generated",
    "consensus": "raft",
    "customizePorts": false,
    "deployment": "bash",
    "generateKeys": true,
    "genesisFile": "",
    "name": "6-nodes-raft-tessera-bash",
    "networkId": 10,
    "permissioned": true,
    "quorumVersion": "2.4.0",
    "transactionManager": "0.10.2",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "enclavePort": 9180,
        "ip": "127.0.0.1",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "enclavePort": 9181,
        "ip": "127.0.0.1",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "enclavePort": 9182,
        "ip": "127.0.0.1",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "ip": "127.0.0.1",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
      "tm": Object {
        "enclavePort": 9183,
        "ip": "127.0.0.1",
        "p2pPort": 9004,
        "thirdPartyPort": 9084,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "ip": "127.0.0.1",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
      "tm": Object {
        "enclavePort": 9184,
        "ip": "127.0.0.1",
        "p2pPort": 9005,
        "thirdPartyPort": 9085,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "ip": "127.0.0.1",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
      "tm": Object {
        "enclavePort": 9185,
        "ip": "127.0.0.1",
        "p2pPort": 9006,
        "thirdPartyPort": 9086,
      },
    },
  ],
}
`;

exports[`creates 6nodes raft custom docker config 1`] = `
Object {
  "dockerCustom": undefined,
  "network": Object {
    "cakeshop": "none",
    "configDir": "network/6-nodes-raft-tessera-docker-compose/generated",
    "consensus": "raft",
    "customizePorts": false,
    "deployment": "docker-compose",
    "generateKeys": true,
    "genesisFile": "",
    "name": "6-nodes-raft-tessera-docker-compose",
    "networkId": 10,
    "permissioned": true,
    "quorumVersion": "2.4.0",
    "transactionManager": "0.10.2",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "ip": "172.16.239.11",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "enclavePort": 9180,
        "ip": "172.16.239.101",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "ip": "172.16.239.12",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "enclavePort": 9181,
        "ip": "172.16.239.102",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "ip": "172.16.239.13",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "enclavePort": 9182,
        "ip": "172.16.239.103",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "ip": "172.16.239.14",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
      "tm": Object {
        "enclavePort": 9183,
        "ip": "172.16.239.104",
        "p2pPort": 9004,
        "thirdPartyPort": 9084,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "ip": "172.16.239.15",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
      "tm": Object {
        "enclavePort": 9184,
        "ip": "172.16.239.105",
        "p2pPort": 9005,
        "thirdPartyPort": 9085,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "ip": "172.16.239.16",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
      "tm": Object {
        "enclavePort": 9185,
        "ip": "172.16.239.106",
        "p2pPort": 9006,
        "thirdPartyPort": 9086,
      },
    },
  ],
}
`;

exports[`creates 7nodes istanbul cakeshop config 1`] = `
Object {
  "dockerCustom": undefined,
  "network": Object {
    "cakeshop": "0.11.0-RC2",
    "configDir": "network/7-nodes-istanbul-tessera-bash/generated",
    "consensus": "istanbul",
    "customizePorts": false,
    "deployment": "bash",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "7-nodes-istanbul-tessera-bash",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.4.0",
    "transactionManager": "0.10.2",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "enclavePort": 9180,
        "ip": "127.0.0.1",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "enclavePort": 9181,
        "ip": "127.0.0.1",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "enclavePort": 9182,
        "ip": "127.0.0.1",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "ip": "127.0.0.1",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
      "tm": Object {
        "enclavePort": 9183,
        "ip": "127.0.0.1",
        "p2pPort": 9004,
        "thirdPartyPort": 9084,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "ip": "127.0.0.1",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
      "tm": Object {
        "enclavePort": 9184,
        "ip": "127.0.0.1",
        "p2pPort": 9005,
        "thirdPartyPort": 9085,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "ip": "127.0.0.1",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
      "tm": Object {
        "enclavePort": 9185,
        "ip": "127.0.0.1",
        "p2pPort": 9006,
        "thirdPartyPort": 9086,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21006,
        "ip": "127.0.0.1",
        "raftPort": 50407,
        "rpcPort": 22006,
        "wsPort": 23006,
      },
      "tm": Object {
        "enclavePort": 9186,
        "ip": "127.0.0.1",
        "p2pPort": 9007,
        "thirdPartyPort": 9087,
      },
    },
  ],
}
`;

exports[`creates 7nodes istanbul config 1`] = `
Object {
  "dockerCustom": undefined,
  "network": Object {
    "cakeshop": "none",
    "configDir": "network/7-nodes-istanbul-tessera-bash/generated",
    "consensus": "istanbul",
    "customizePorts": false,
    "deployment": "bash",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "7-nodes-istanbul-tessera-bash",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.4.0",
    "transactionManager": "0.10.2",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "enclavePort": 9180,
        "ip": "127.0.0.1",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "enclavePort": 9181,
        "ip": "127.0.0.1",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "enclavePort": 9182,
        "ip": "127.0.0.1",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "ip": "127.0.0.1",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
      "tm": Object {
        "enclavePort": 9183,
        "ip": "127.0.0.1",
        "p2pPort": 9004,
        "thirdPartyPort": 9084,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "ip": "127.0.0.1",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
      "tm": Object {
        "enclavePort": 9184,
        "ip": "127.0.0.1",
        "p2pPort": 9005,
        "thirdPartyPort": 9085,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "ip": "127.0.0.1",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
      "tm": Object {
        "enclavePort": 9185,
        "ip": "127.0.0.1",
        "p2pPort": 9006,
        "thirdPartyPort": 9086,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21006,
        "ip": "127.0.0.1",
        "raftPort": 50407,
        "rpcPort": 22006,
        "wsPort": 23006,
      },
      "tm": Object {
        "enclavePort": 9186,
        "ip": "127.0.0.1",
        "p2pPort": 9007,
        "thirdPartyPort": 9087,
      },
    },
  ],
}
`;

exports[`creates 7nodes istanbul docker config 1`] = `
Object {
  "dockerCustom": undefined,
  "network": Object {
    "cakeshop": "none",
    "configDir": "network/7-nodes-istanbul-tessera-docker-compose/generated",
    "consensus": "istanbul",
    "customizePorts": false,
    "deployment": "docker-compose",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "7-nodes-istanbul-tessera-docker-compose",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.4.0",
    "transactionManager": "0.10.2",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "ip": "172.16.239.11",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "enclavePort": 9180,
        "ip": "172.16.239.101",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "ip": "172.16.239.12",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "enclavePort": 9181,
        "ip": "172.16.239.102",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "ip": "172.16.239.13",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "enclavePort": 9182,
        "ip": "172.16.239.103",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "ip": "172.16.239.14",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
      "tm": Object {
        "enclavePort": 9183,
        "ip": "172.16.239.104",
        "p2pPort": 9004,
        "thirdPartyPort": 9084,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "ip": "172.16.239.15",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
      "tm": Object {
        "enclavePort": 9184,
        "ip": "172.16.239.105",
        "p2pPort": 9005,
        "thirdPartyPort": 9085,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "ip": "172.16.239.16",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
      "tm": Object {
        "enclavePort": 9185,
        "ip": "172.16.239.106",
        "p2pPort": 9006,
        "thirdPartyPort": 9086,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21006,
        "ip": "172.16.239.17",
        "raftPort": 50407,
        "rpcPort": 22006,
        "wsPort": 23006,
      },
      "tm": Object {
        "enclavePort": 9186,
        "ip": "172.16.239.107",
        "p2pPort": 9007,
        "thirdPartyPort": 9087,
      },
    },
  ],
}
`;

exports[`creates 7nodes istanbul no-TM custom config 1`] = `
Object {
  "dockerCustom": undefined,
  "network": Object {
    "cakeshop": "none",
    "configDir": "network/7-nodes-istanbul-bash/generated",
    "consensus": "istanbul",
    "customizePorts": false,
    "deployment": "bash",
    "generateKeys": true,
    "genesisFile": "",
    "name": "7-nodes-istanbul-bash",
    "networkId": 12,
    "permissioned": true,
    "quorumVersion": "2.4.0",
    "transactionManager": "none",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "ip": "127.0.0.1",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "ip": "127.0.0.1",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "ip": "127.0.0.1",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21006,
        "ip": "127.0.0.1",
        "raftPort": 50407,
        "rpcPort": 22006,
        "wsPort": 23006,
      },
    },
  ],
}
`;

exports[`creates 7nodes istanbul no-TM custom docker config 1`] = `
Object {
  "dockerCustom": undefined,
  "network": Object {
    "cakeshop": "none",
    "configDir": "network/7-nodes-istanbul-docker-compose/generated",
    "consensus": "istanbul",
    "customizePorts": false,
    "deployment": "docker-compose",
    "generateKeys": false,
    "genesisFile": "",
    "name": "7-nodes-istanbul-docker-compose",
    "networkId": 10,
    "permissioned": true,
    "quorumVersion": "2.4.0",
    "transactionManager": "none",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "ip": "172.16.239.11",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "ip": "172.16.239.12",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "ip": "172.16.239.13",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21003,
        "ip": "172.16.239.14",
        "raftPort": 50404,
        "rpcPort": 22003,
        "wsPort": 23003,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21004,
        "ip": "172.16.239.15",
        "raftPort": 50405,
        "rpcPort": 22004,
        "wsPort": 23004,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21005,
        "ip": "172.16.239.16",
        "raftPort": 50406,
        "rpcPort": 22005,
        "wsPort": 23005,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21006,
        "ip": "172.16.239.17",
        "raftPort": 50407,
        "rpcPort": 22006,
        "wsPort": 23006,
      },
    },
  ],
}
`;

exports[`creates quickstart config with java 11+ 1`] = `
Object {
  "dockerCustom": undefined,
  "network": Object {
    "cakeshop": "0.11.0-RC2-J11",
    "configDir": "network/3-nodes-raft-tessera-bash/generated",
    "consensus": "raft",
    "customizePorts": false,
    "deployment": "bash",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "3-nodes-raft-tessera-bash",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.4.0",
    "transactionManager": "0.10.3",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "enclavePort": 9180,
        "ip": "127.0.0.1",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "enclavePort": 9181,
        "ip": "127.0.0.1",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "enclavePort": 9182,
        "ip": "127.0.0.1",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
  ],
}
`;

exports[`creates quickstart setup 1`] = `
Object {
  "dockerCustom": undefined,
  "network": Object {
    "cakeshop": "0.11.0-RC2",
    "configDir": "network/3-nodes-raft-tessera-bash/generated",
    "consensus": "raft",
    "customizePorts": false,
    "deployment": "bash",
    "generateKeys": false,
    "genesisFile": "none",
    "name": "3-nodes-raft-tessera-bash",
    "networkId": "10",
    "permissioned": true,
    "quorumVersion": "2.4.0",
    "transactionManager": "0.10.2",
    "verbosity": 5,
  },
  "nodes": Array [
    Object {
      "quorum": Object {
        "devP2pPort": 21000,
        "ip": "127.0.0.1",
        "raftPort": 50401,
        "rpcPort": 22000,
        "wsPort": 23000,
      },
      "tm": Object {
        "enclavePort": 9180,
        "ip": "127.0.0.1",
        "p2pPort": 9001,
        "thirdPartyPort": 9081,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21001,
        "ip": "127.0.0.1",
        "raftPort": 50402,
        "rpcPort": 22001,
        "wsPort": 23001,
      },
      "tm": Object {
        "enclavePort": 9181,
        "ip": "127.0.0.1",
        "p2pPort": 9002,
        "thirdPartyPort": 9082,
      },
    },
    Object {
      "quorum": Object {
        "devP2pPort": 21002,
        "ip": "127.0.0.1",
        "raftPort": 50403,
        "rpcPort": 22002,
        "wsPort": 23002,
      },
      "tm": Object {
        "enclavePort": 9182,
        "ip": "127.0.0.1",
        "p2pPort": 9003,
        "thirdPartyPort": 9083,
      },
    },
  ],
}
`;
